<resources>
    <string name="app_name">Music Player [Prototype]</string>
    <string name="main_page_first_act">New Releases</string>
    <string name="main_page_second_act">Top Songs</string>
    <string name="main_page_third_act">Top Albums</string>
    <string name="main_page_fourth_act">Recommended</string>
    <string name="main_page_fifth_act">Playlists</string>
    <string name="album">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="songs">Songs</string>
    <string name="now_playing">Now Playing</string>
    <string name="spot_one">1</string>
    <string name="spot_two">2</string>
    <string name="spot_three">3</string>
    <string name="song_stats_info">Song Stats</string>
    <string name="icon">icon</string>
    <string name="no_of_likes">#liked</string>
    <string name="sample_number">1000</string>
    <string name="genre_info">Genre</string>
    <string name="song_screen_song_name">Song Name</string>
    <string name="song_screen_artist_name">Artist Name</string>
    <string name="playlist_pop">Pop</string>
    <string name="playlist_workout">Workout</string>
    <string name="playlist_motivation">Motivation</string>


    <string name="playlist_screen_desc">Point of Screen: Displays list of songs from the
        selected playlist. Provides the option to add song to user library or remove song from the
        playlist.
        \n\nTechnical hurdles: Shuffle playing the songs or modifying the list. Should the user
        choose to modify the list and shuffle play, then saving the shuffled order in a temporary
        storage without changing the main playlist.</string>

    <string name="new_releases_desc_text_view">Technical hurdle: Implementing swipe right for more
    albums or playlists</string>

    <string name="album_screen_desc">Point of Screen: Displays the lists of songs from the selected
    album. \n\nFacilitates the user to cherry pick songs to be added to the user\'s\ library</string>

    <string name="now_playing_desc">Point of Screen: Displays the song that is currently playing
    along with the song\'\s seekbar</string>

    <string name="now_playing_seekbar">This is where the seekbar along with audio control buttons go</string>

    <string name="shuffle_button">shuffle play</string>

    <string name="songs_screen_desc">Point of Screen: Displays list of Top Charts songs in chronological
    order.\n\nSong stats tile gives rich information like trending up/down icon, no of times favorited
    and the genre of the song</string>

    <string name="recommended_screen_desc">Point of Screen: Displays recommended audio content
    tailored to user tastes and preferences. The audio content would be presented in three categories,
    namely - Songs, Albums and Playlists
    \n\nTechnical hurdles: Building and integrating a recommender engine that accurately displays
    content per user tastes and preferences</string>

    <string name="recommended_categories_desc">Songs category would implement a vertical list view
        where each row would be a song card with song stats info.\nAlbums category would implement a
        horizontal scrollview of albums that are displayed as vinyl disks with the name of the album
        on the vinyl.\nPlaylists would implement a horizontal scroll view too with square tiles with
        playlist art and a scrim at the bottom with the name of the playlist. Each scrollable element
        would be registered to a listener, where each listener navigates to the now playing screen
        while beginning to play a song or album or playlist.
    </string>

    <string name="playlists_desc">Point of Screen: Displays list of playlists that are grouped based
    on different genres and moods. This screen would be implemented as a vertical ScrollView with each
    row housing three playlist cards. Each playlist card would be designed with a playlist art, which
        would be super-imposed by the playlist\'s\ name and a small portion of the right side of the
        card will contain playlist stats, like how many times was it liked and its genre.
    </string>

    <string name="playlists_addtnl_desc">
        Each genre or mood based playlist opens up to its playlists screen. The purpose is to let the
        user view the songs in the playlist and allow the user to play a modified or default version
        of the same playlist.
    </string>
    <string name="song_1_label">Song 1</string>
    <string name="song_2_label">Song 2</string>
    <string name="song_3_label">Song 3</string>
</resources>
