<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/screenColor"
            tools:context="com.example.android.musicstructureapp.AlbumScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/DescText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight_dips_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginStart="@dimen/left_margin"
            android:text="@string/album_screen_desc"/>

        <ImageView
            android:layout_width="@dimen/artwork_square"
            android:layout_height="@dimen/artwork_square"
            android:layout_marginBottom="@dimen/eight_dips_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginStart="@dimen/left_margin"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_album_art_two"
            tools:ignore="ContentDescription"/>

        <Button
            android:id="@+id/shuffle_play_button"
            style="@style/ButtonStyling"
            android:layout_width="@dimen/artwork_square"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginStart="@dimen/left_margin"
            android:text="@string/shuffle_button"/>

        <TextView
            android:id="@+id/song_1"
            style="@style/BannerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight_dips_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginStart="@dimen/left_margin"
            android:text="@string/song_1_label"/>

        <TextView
            android:id="@+id/song_2"
            style="@style/BannerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight_dips_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginStart="@dimen/left_margin"
            android:text="@string/song_2_label"/>

        <TextView
            android:id="@+id/song_3"
            style="@style/BannerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight_dips_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginStart="@dimen/left_margin"
            android:text="@string/song_3_label"/>

    </LinearLayout>

</ScrollView>